--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>pizzashop.Main</mainClass>
+          <mainClass>aair2450mv.Main</mainClass>
         </configuration>
       </plugin>
     </plugins>
